work with overlay

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,14 +91,14 @@
           <ul class="portfolio list">
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/technokriak.jpg"
-                    alt="образец фото сотрудников"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/technokriak.jpg"
+                  alt="образец фото сотрудников"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -112,14 +112,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/poster.jpg"
-                    alt="постер два баскетболиста"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/poster.jpg"
+                  alt="постер два баскетболиста"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -135,14 +135,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/restaurant.jpg"
-                    alt="реклама ресторана"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/restaurant.jpg"
+                  alt="реклама ресторана"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -156,14 +156,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/projectprime.jpg"
-                    alt="наушики"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/projectprime.jpg"
+                  alt="наушики"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -177,14 +177,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/projectboxes.jpg"
-                    alt="две коробки"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/projectboxes.jpg"
+                  alt="две коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -198,14 +198,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/inspiration.jpg"
-                    alt="монитор с изображением"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="монитор с изображением"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -219,14 +219,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/journal.jpg"
-                    alt="открытый журнал"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/journal.jpg"
+                  alt="открытый журнал"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -240,14 +240,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/projectlab.jpg"
-                    alt="бирки бумажные"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/projectlab.jpg"
+                  alt="бирки бумажные"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -261,14 +261,14 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <div class="card-thumb">
-                  <img
-                    src="./images/growingbusiness.jpg"
-                    alt="работа на лэптопе"
-                    width="370"
-                    height="294"
-                  />
-                  <p class="portfolio-text">
+                <img
+                  src="./images/growingbusiness.jpg"
+                  alt="работа на лэптопе"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay">
+                  <p>
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
