--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
             Заказать услугу
           </button>
         </div>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button class="m-btn" data-modal-close>
+              <svg class="modal-btn">
+                <use
+                  href="./images/icons.svg#modal-close"
+                  width="11px"
+                  height="11px"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </section>
       <section class="section benefits">
         <div class="container">
@@ -589,15 +602,6 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="m-btn" data-modal-close>
-          <svg class="modal-btn" width="8px" height="8px">
-            <use href="./images/icons.svg#close-black"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
     <script src="./modal.js"></script>
   </body>
 </html>
