--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
               <a class="portfolio-link" href="#">
                 <img
                   src="./images/technokriak.jpg"
-                  alt="образец фото сотрудников"
+                  alt="три человека на экране - двое мужчин и женщина"
                   width="370"
                   height="294"
                 />
@@ -110,11 +110,12 @@
                 </div>
               </a>
             </li>
+
             <li class="item">
               <a class="portfolio-link" href="#">
                 <img
                   src="./images/poster.jpg"
-                  alt="постер два баскетболиста"
+                  alt="два баскетболиста с мячем"
                   width="370"
                   height="294"
                 />
@@ -133,11 +134,12 @@
                 </div>
               </a>
             </li>
+
             <li class="item">
               <a class="portfolio-link" href="#">
                 <img
                   src="./images/restaurant.jpg"
-                  alt="реклама ресторана"
+                  alt="рисунок рекламы магазина"
                   width="370"
                   height="294"
                 />
@@ -154,6 +156,7 @@
                 </div>
               </a>
             </li>
+
             <li class="item">
               <a class="portfolio-link" href="#">
                 <img
