--- a/portfolio.html
+++ b/portfolio.html
@@ -91,18 +91,21 @@
           <ul class="portfolio list">
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/technokriak.jpg"
-                  alt="три человека на экране - двое мужчин и женщина"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/technokriak.jpg"
+                    alt="три человека- двое мужчин и женщина"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Технокряк</h2>
@@ -113,18 +116,21 @@
 
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/poster.jpg"
-                  alt="два баскетболиста с мячем"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/poster.jpg"
+                    alt="два баскетболиста с мячем"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">
@@ -134,21 +140,23 @@
                 </div>
               </a>
             </li>
-
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/restaurant.jpg"
-                  alt="рисунок рекламы магазина"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/restaurant.jpg"
+                    alt="рисунок рекламы магазина"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Ресторан Seafood</h2>
@@ -156,21 +164,23 @@
                 </div>
               </a>
             </li>
-
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/projectprime.jpg"
-                  alt="наушики"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/projectprime.jpg"
+                    alt="наушики"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Проект Prime</h2>
@@ -180,18 +190,21 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/projectboxes.jpg"
-                  alt="две коробки"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/projectboxes.jpg"
+                    alt="две коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Проект Boxes</h2>
@@ -201,18 +214,21 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/inspiration.jpg"
-                  alt="монитор с изображением"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="монитор с изображением"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Inspiration has no Borders</h2>
@@ -222,18 +238,21 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/journal.jpg"
-                  alt="открытый журнал"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/journal.jpg"
+                    alt="открытый журнал"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Издание Limited Edition</h2>
@@ -243,18 +262,21 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/projectlab.jpg"
-                  alt="бирки бумажные"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/projectlab.jpg"
+                    alt="бирки бумажные"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Проект LAB</h2>
@@ -264,18 +286,21 @@
             </li>
             <li class="item">
               <a class="portfolio-link" href="#">
-                <img
-                  src="./images/growingbusiness.jpg"
-                  alt="работа на лэптопе"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">
-                  <p>
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                <div class="overlay-box">
+                  <img
+                    src="./images/growingbusiness.jpg"
+                    alt="работа на лэптопе"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-text">
                   <h2 class="portfolio-menu">Growing Business</h2>
